# http-tunnel

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README_CN.md  deny.toml
apps/forwarder/: Cargo.toml
apps/forwarder/src/: main.rs
apps/handler/: Cargo.toml
apps/handler/src/: auth.rs  content_rewrite.rs  error_handling.rs  lib.rs  main.rs
apps/handler/src/handlers/: cleanup.rs  connect.rs  disconnect.rs  forwarding.rs  mod.rs  response.rs  stream.rs  tests.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs  error.rs  lib.rs  validation.rs
crates/common/src/models/: connection.rs  mod.rs  pending.rs
crates/common/src/protocol/: message.rs  mod.rs  request.rs  response.rs
crates/common/src/utils/: encoding.rs  headers.rs  id.rs  mod.rs  time.rs
docs/: README.md  content-rewriting-for-path-based-routing.md  debugging-serverless-websocket-tunnel-zh.md  debugging-serverless-websocket-tunnel.md  fixing-websocket-dispatch-failures.md  improvements-implementation-plan.md  improvements-spec.md
infra/: .env.example  .gitignore  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
infra/scripts/: trigger-cleanup.sh
infra/src/: apigateway.ts  config.ts  domain.ts  dynamodb.ts  eventbridge.ts  iam.ts  lambda.ts  monitoring.ts  streaming.ts
specs/: 0001-idea.md  README.md  instructions.md
specs/serverless/: 0002-common.md  0003-forwarder.md  0004-lambda.md  0005-iac.md  0006-implementation-plan.md  0007-http2-grpc-support.md  0008-path-forward.md  0009-content-rewrite.md  0010-improvement.md  0011-event-driven.md  0012-subdomain.md
testapp/: main.py  pyproject.toml
tests/load/: README.md  k6-tunnel-test.js
