[package]
name = "http-tunnel-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Common utilities and types for http-tunnel"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

# Additional dependencies
base64 = "0.22"
uuid = { version = "1.18", features = ["v4", "serde"] }
http = "1.3"
rand = "0.8"
